feat(BID): add bids
